--- a/kubeflow_pipeline/ZenML_Kubeflow_Pipelines.ipynb
+++ b/kubeflow_pipeline/ZenML_Kubeflow_Pipelines.ipynb
@@ -6,7 +6,7 @@
     "id": "RO_v5iIaYFi2"
    },
    "source": [
-    "# ZenML: Create production-ready ML pipelines\n",
+    "# ZenML: Create production-ready ML pipelines (Windows) \n",
     "\n",
     "Our goal here is to help you to get the first practical experience with our tool and give you a brief overview on some basic functionalities of ZenML. We will start local in the jupyter notebook but will transition over to a more robust environment with Kubeflow pipelines.\n",
     "\n",
